--- a/hearth/sass/media.sass
+++ b/hearth/sass/media.sass
@@ -99,6 +99,17 @@
             align-items: center
             padding: 40px 0px
 
+    .contacts
+        &__table
+            grid-template-columns: 1fr
+        &__row
+            &:last-child
+                margin-top: 40px
+        &__side
+            &:last-child
+                border-left: none
+                border-top: 1px solid #ccc
+
     .item
         padding-bottom: 0
         &__title
@@ -165,6 +176,17 @@
         &__title
             line-height: 30px
             font-weight: bold
+
+    .information
+        &__container
+            grid-template-columns: 1fr
+        &__item
+            &:last-child
+                border-top: 1px solid #ccc
+    .info
+        .description
+            &__body
+                padding-top: 0
 
     .menu
         .container
@@ -390,6 +412,14 @@
         &__order
             padding: 25px 5px
 
+    .info
+        .description__card
+            display: flex
+            flex-direction: column
+            align-items: center
+        &__sertificate
+            margin: 10px !important
+
     .banner
         &__title
             font-size: 18px
@@ -472,9 +502,6 @@
             font-size: 14px
             line-height: 18px
 
-    .advantage
-        
-
     .review
         box-shadow: none
         &__title
@@ -487,6 +514,12 @@
             &-wrap
                 height: 80px
                 width: 80px
+
+    .contacts
+        &__side
+            padding: 20px 10px
+            &:first-child
+                padding: 20px 10px 20px 45px
 
     .footer
         &__copyright
