--- a/hearth/sass/media.sass
+++ b/hearth/sass/media.sass
@@ -131,10 +131,9 @@
     .description
         &__wrap
             flex-direction: column
-            align-items: center
+            align-items: center !important
         &__card
-            margin-left: 0
-            margin-top: 40px
+            margin: 40px 0 !important
 
     .compound
         padding-bottom: 20px
@@ -166,6 +165,21 @@
             & + &
                 margin-top: 2em
 
+@media screen and ( max-width: 860px )
+    .pair
+        padding-top: 20px
+        &__container
+            flex-direction: column
+            align-items: stretch
+        &__item
+            max-width: none
+            & + &
+                margin: 30px 0 0 0
+    
+    .map
+        &_delivery
+            padding-bottom: 20px
+
 @media screen and ( max-width: 800px )
     .advantages
         &__wrap
@@ -188,6 +202,11 @@
         .description
             &__body
                 padding-top: 0
+
+    .colored
+        &__title
+            font-size: 22px
+            line-height: 26px
 
     .banner
         background: radial-gradient(circle, rgba(255,220,64,1) 60%, rgba(227,119,30,1) 100%)
@@ -406,6 +425,10 @@
             outline-offset: -10px
             min-width: auto
 
+    .section
+        &__colored
+            font-size: 16px
+
     .filter
         &__weight
             margin: 20px 40px 30px
@@ -423,6 +446,13 @@
     .item
         &__order
             padding: 25px 5px
+
+    .colored
+        &__title
+            font-size: 18px
+            line-height: 22px
+        .button
+            padding: 15px
 
     .info
         .description__card
